# rust-lang

./: .gitignore  README.md
adv-code/: Cargo.toml
adv-code/src/: day1.rs  main.rs
book-tracker-api/: Cargo.toml
bookmark_manager/: Cargo.toml
branches/src/: main.rs
cli-calc/src/: main.rs
closure/src/: lib.rs  main.rs
collections/src/: hashmap.rs  main.rs  practice.rs  string.rs
converter-api/: Cargo.toml
converter-api/src/: main.rs
enum_ch6/: Cargo.toml
enum_ch6/src/: main.rs
error_handling/src/: error.rs  guess.rs  hello.txt  main.rs
expense-tracker/: .gitignore  Cargo.toml  docker-compose.yml
expense-tracker/migrations/: 20251205173409_create_expense_table.sql
expense-tracker/src/: main.rs
functions/src/: main.rs
generics/src/: generics.rs  lifetime.rs  main.rs  traits.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
jwt-auth/: Cargo.toml  docker-compose.yml
jwt-auth/migrations/: 20251214013433_create_game_accounts_table.sql  20251215004014_create_users_table.sql  20251220001512_fix_timestamp_type.sql
jwt-auth/src/: main.rs  models.rs
jwt-auth/src/handlers/: accounts.rs  auth.rs
jwt-auth/src/middleware/: auth.rs
jwt-auth/src/utils/: auth.rs
milestone_practice/: Cargo.toml
modules/: README.md
movie-api/: Cargo.toml
notes-api/: Cargo.toml
quote-api/: Cargo.toml
shopping-list-cli/: Cargo.toml
temp-logger/: Cargo.toml
tip-calc-cli/: Cargo.toml  README.md
to-do-api/: Cargo.toml
todo_cli_serde/: Cargo.toml
url-shortener/: Cargo.toml
weather-api/: Cargo.toml
word-counter/: readme.md
(+39 files in other folders)
